<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.tmorrissey1.inandout.SummaryActivity"
    android:background="@drawable/summary_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/order_total"
        android:id="@+id/textView17"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="94dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/amountTotalTextView"
        android:layout_alignTop="@+id/textView17"
        android:layout_toRightOf="@+id/textView17"
        android:layout_toEndOf="@+id/textView17"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/items_ordered"
        android:id="@+id/textView18"
        android:layout_below="@+id/textView17"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:textSize="16sp"
        android:textColor="@color/background_floating_material_dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/itemsOrderedTextView"
        android:layout_alignTop="@+id/textView18"
        android:layout_toRightOf="@+id/textView18"
        android:layout_toEndOf="@+id/textView18"
        android:textColor="@color/background_floating_material_dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subtotal"
        android:id="@+id/textView19"
        android:layout_below="@+id/itemsOrderedTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:textColor="@color/background_floating_material_dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/subtotalTextView"
        android:textSize="16sp"
        android:textColor="@color/background_floating_material_dark"
        android:layout_alignTop="@+id/textView19"
        android:layout_toRightOf="@+id/textView19"
        android:layout_toEndOf="@+id/textView19"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tax"
        android:id="@+id/textView20"
        android:textSize="16sp"
        android:textColor="@color/background_floating_material_dark"
        android:layout_below="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/amountTaxTextView"
        android:textSize="16sp"
        android:textColor="@color/background_floating_material_dark"
        android:layout_below="@+id/textView19"
        android:layout_toRightOf="@+id/textView19"
        android:layout_toEndOf="@+id/textView19"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newOrderButtonText"
        android:id="@+id/startNewOrderButton"
        android:layout_below="@+id/textView20"
        android:layout_marginTop="35dp"
        android:textSize="12sp"
        android:textStyle="bold"/>

</RelativeLayout>
